refactor: organise code into folders

--- a/ProcGenFun.Blazor/Pages/Distributions.razor
+++ b/ProcGenFun.Blazor/Pages/Distributions.razor
@@ -1,6 +1,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using ProcGenFun
 @using ProcGenFun.Blazor.Components
+@using ProcGenFun.Distributions
 @using RandN
 @using RandN.Distributions
 @using RandN.Extensions
