feat: add basic structure of Blazor app

--- a/ProcGenFun.Blazor/MainLayout.razor
+++ b/ProcGenFun.Blazor/MainLayout.razor
@@ -1,5 +1,9 @@
-﻿@inherits LayoutComponentBase
+﻿@using ProcGenFun.Blazor.Components
 
-<main class="max-w-screen-md mx-auto text-2xl text-blue-700">
+@inherits LayoutComponentBase
+
+<Nav />
+
+<main class="max-w-screen-md mx-auto px-2">
     @Body
 </main>
