--- a/ProcGenFun.Blazor/Pages/Index.razor
+++ b/ProcGenFun.Blazor/Pages/Index.razor
@@ -1,3 +1,12 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+@using ProcGenFun.Blazor.Components
+
+<PageTitle>ProcGen Fun Playground</PageTitle>
+
+<Title>ProcGen Fun</Title>
+
+<Para>This website is an accompaniment to a series of posts on my blog called
+    <Link Href="https://codingblog.carterdan.net/2024/12/18/PGF-00/">ProcGen Fun</Link>, which aims to combine
+    procedural generation with functional programming.
+</Para>
