feat: add structure for Distributions page

--- a/ProcGenFun.Blazor/Components/Nav.razor
+++ b/ProcGenFun.Blazor/Components/Nav.razor
@@ -1,5 +1,6 @@
 <nav class="bg-blue-800 text-lg text-gray-50">
     <div class="max-w-screen-md mx-auto flex flex-row justify-center">
         <a class="px-6 py-2 hover:bg-blue-700" href="/">Home</a>
+        <a class="px-6 py-2 hover:bg-blue-700" href="/distributions">Distributions</a>
     </div>
 </nav>
