--- a/ProcGenFun.Blazor/Components/Nav.razor
+++ b/ProcGenFun.Blazor/Components/Nav.razor
@@ -2,5 +2,6 @@
     <div class="max-w-screen-md mx-auto flex flex-row justify-center">
         <a class="px-6 py-2 hover:bg-blue-700" href="/">Home</a>
         <a class="px-6 py-2 hover:bg-blue-700" href="/distributions">Distributions</a>
+        <a class="px-6 py-2 hover:bg-blue-700" href="/mazes">Mazes</a>
     </div>
 </nav>
