refactor: extract component

--- a/ProcGenFun.Blazor/Pages/Distributions.razor
+++ b/ProcGenFun.Blazor/Pages/Distributions.razor
@@ -22,8 +22,7 @@
         </select>
     </div>
 
-    <button class="px-5 py-2 bg-blue-800 text-gray-50 hover:bg-blue-600 rounded-lg"
-        @onclick="GenerateHistogram">Generate Histogram</button>
+    <Button Text="Generate Histogram" OnClick="GenerateHistogram" />
 </div>
 
 @if (histogram != null)
